feat: add click-to-see post list text, minimize listed post content
This also corrects for external links in site navigation.

--- a/templates/macros/macros.html
+++ b/templates/macros/macros.html
@@ -50,12 +50,18 @@
                     {% set hide_read_more = true %}
                 {% endif %}
                 -->
-                {{ page.content | safe }}
+                {% if page.summary %}
+                    {{ page.summary | safe }}
+                {% else %}
+                    {{ page.content | safe }}
+                {% endif %}
             </div>
 
+            <!--
             {% if not hide_read_more %}
                 <a class="readmore" href={{ page.permalink }}>{{ extra.translations[lang][0].show_more }}</a>
             {% endif %}
+            -->
         </section>
 
     {% endfor -%}
