--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -6,7 +6,11 @@
     <nav>
         {% for menu in config.extra.translations[lang][0].menus %}
           {% if loop.index0 > 0 %} | {% endif %}
-          <a href={{ config.base_url }}/{{ menu.url }}>{{ menu.name }}</a>
+          {% if menu.url is starting_with("https://") %}
+            <a href={{ menu.url }}>{{ menu.name }}</a>
+          {% else %}
+            <a href={{ config.base_url }}/{{ menu.url }}>{{ menu.name }}</a>
+          {% endif %}
         {% endfor %}
           | <a href={{ get_url(path="atom.xml", trailing_slash=false) }}>atom</a>
 
