--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -12,7 +12,7 @@
             <a href={{ config.base_url }}/{{ menu.url }}>{{ menu.name }}</a>
           {% endif %}
         {% endfor %}
-          | <a href={{ get_url(path="atom.xml", trailing_slash=false) }}>atom</a>
+        <!-- | <a href={{ get_url(path="atom.xml", trailing_slash=false) }}>atom</a> -->
 
         <!--
         {% if config.extra.translations.languages %}
