--- a/static/css/main.css
+++ b/static/css/main.css
@@ -12,11 +12,14 @@ html {
   font-family: "Roboto Mono", monospace;
   font-size: 15px;
   line-height: 1.6em;
+  height: 100%;
 }
 
 body {
   display: block;
-  margin: 8px;
+  padding: 0px;
+  margin: 0px;
+  height: 100%;
 }
 
 * {
@@ -70,7 +73,7 @@ blockquote {
 }
 
 a {
-  border-bottom: 2px solid var(--maincolor);
+  box-shadow: 0 2px 0 var(--maincolor);
   color: inherit;
   text-decoration: none;
 }
@@ -80,16 +83,19 @@ a.title {
 }
 
 a:hover {
-  background-color: var(--hovercolor);
-  color: #fff;
+  box-shadow: 0 3px 0 var(--maincolor);
 }
 
-#main_title a {
+#title_landing a {
   border-bottom: none;
 }
 
 nav a {
-  border-bottom: none;
+  box-shadow: none;
+}
+
+nav a:hover {
+  box-shadow: none;
 }
 
 ul {
@@ -174,6 +180,23 @@ pre code {
   word-wrap: break-word;
 }
 
+.content_landing {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 800px;
+  padding: 0 1ch;
+  word-wrap: break-word;
+
+  height: 100%;
+  flex-direction: column;
+  box-sizing: border-box;
+
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 /* Header */
 header {
   display: flex;
@@ -182,22 +205,36 @@ header {
   margin: 1em 0;
 }
 
-header .main {
-  font-size: 1.5rem;
+h1 {
+  font-size: 2.0rem;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
+h2 {
+  font-size: 1.8rem;
+}
+
+h3 {
+  font-size: 1.6rem;
+}
+
+h4 {
+  font-size: 1.4rem;
+}
+
+h5 {
+  font-size: 1.2rem;
+}
+
 h6 {
   font-size: 1.0rem;
-  margin-top: 2em;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin-top: 1em;
 }
 
 h1.section-title {
-  font-size: 1.3rem;
+  font-size: 2.0rem;
 }
 
 h1.section-title::before {
@@ -211,36 +248,6 @@ h1.blog-post-title {
 
 h1.blog-post-title::before {
   content: "¶ ";
-}
-
-h1::before {
-  color: var(--maincolor);
-  content: "# ";
-}
-
-h2::before {
-  color: var(--maincolor);
-  content: "## ";
-}
-
-h3::before {
-  color: var(--maincolor);
-  content: "### ";
-}
-
-h4::before {
-  color: var(--maincolor);
-  content: "#### ";
-}
-
-h5::before {
-  color: var(--maincolor);
-  content: "##### ";
-}
-
-h6::before {
-  color: var(--maincolor);
-  content: "###### ";
 }
 
 .meta {
@@ -260,18 +267,22 @@ footer {
 .soc {
   display: flex;
   align-items: center;
-  padding-right: 1rem;
   margin-right: 1rem;
-  border-right: 2px solid;
   border-bottom: none;
+  box-shadow: none;
 }
 
 .footer-info {
   padding: var(--footer-padding);
 }
 
-#main_title {
+#title_landing {
+  font-size: 1.5rem;
   margin-bottom: 10px;
+}
+
+#title_landing > a {
+  box-shadow: none;
 }
 
 /* Common */
@@ -333,10 +344,6 @@ article .title {
 
 svg {
   max-height: 15px;
-}
-
-.soc:hover {
-  color: white;
 }
 
 .draft-label {
