--- a/templates/posts.html
+++ b/templates/posts.html
@@ -3,21 +3,19 @@
 {% extends "index.html" %}
 
 {% block main_content %}
-    <main class="list">
-        <div class="site-description">
-            {% if config.description %}
-                {{ config.description | markdown | safe }}
-            {% endif %}
-        </div>
+    <div class="title">
+        <h1 class="section-title">{{ section.title }}</h1>
+    </div>
 
+    <main class="list">
         {%- if paginator %}
             {%- set show_pages = paginator.pages -%}
         {% else %}
-            {% set section = get_section(path="posts/_index.md") %}
+            {% set section = get_section(path="blog/_index.md") %}
             {%- set show_pages = section.pages -%}
         {% endif -%}
 
-        <p>Click a post's timestamp to see the full post. Find the atom feed <a href={{ get_url(path="blog/atom.xml", trailing_slash=false) }}>here</a>.</p>
+        <p>Atom feed is <a href={{ get_url(path="blog/atom.xml", trailing_slash=false) }}>here</a>.</p>
 
         {{ post_macros::list_posts(pages=show_pages, extra=config.extra) }}
     </main>
