--- a/templates/macros/macros.html
+++ b/templates/macros/macros.html
@@ -24,7 +24,7 @@
         <hr class="post-divider"/>
 
         <section>
-            <a href={{ page.permalink }}>{{ page.date | date(format="%Y-%m-%d %H:%M") }}</a>
+            <a href={{ page.permalink }}>{{ page.title }}</a>
 
             <!-- <time>{{ page.date | date(format="%Y-%m-%d %H:%M") }}</time> -->
             <!-- <span>| {{ page.reading_time }} {{ config.extra.translations[lang][0].read_time }}</span> -->
@@ -89,7 +89,8 @@
               <h1 class="section-title">{{ page.title }}</h1>
               <p class="date-as-version">v. {{ page.date | date(format="%Y-%m-%d %H:%M") }}</p>
             {% else %}
-              <h1 class="blog-post-title">{{ page.date | date(format="%Y-%m-%d %H:%M") }}</h1>
+              <h1 class="blog-post-title">{{ page.title }}</h1>
+              <p>{{ page.date | date(format="%H:%M:%S") }}</p>
             {% endif %}
 
 
